P4/y.output
Terminals unused in grammar

    XOR
    BAR


State 147 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: MAIN PARIZQ PARDER bloque

    2 $@1: %empty

    3 bloque: INICIOBLOQUE $@1 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    4 declar_de_subprogs: declar_de_subprogs declar_subprog
    5                   | %empty

    6 $@2: %empty

    7 declar_subprog: cabecera_subprog $@2 bloque

    8 declar_de_variables_locales: VAR INICIOBLOQUE variables_locales FINBLOQUE
    9                            | %empty

   10 variables_locales: variables_locales cuerpo_declar_variables
   11                  | cuerpo_declar_variables

   12 $@3: %empty

   13 cuerpo_declar_variables: tipo $@3 lista_variables PYC
   14                        | error

   15 tipo: PRIMITIVO
   16     | ESTRUCTURA tipo

   17 lista_variables: ID COMA lista_variables
   18                | ID

   19 $@4: %empty

   20 cabecera_subprog: tipo ID $@4 PARIZQ parametros PARDER

   21 lista_expresiones: lista_expresiones COMA expresion
   22                  | expresion

   23 parametros: parametros COMA tipo ID
   24           | tipo ID
   25           | error

   26 sentencias: sentencias sentencia
   27           | %empty

   28 sentencia: bloque
   29          | sentencia_asignacion
   30          | sentencia_if
   31          | sentencia_while
   32          | sentencia_entrada
   33          | sentencia_salida
   34          | sentencia_return
   35          | sentencia_repeat_until
   36          | sentencia_lista

   37 sentencia_asignacion: ID ASIGN expresion PYC

   38 sentencia_if: IF PARIZQ expresion PARDER sentencia sentencia_else

   39 sentencia_else: ELSE sentencia
   40               | %empty

   41 sentencia_while: WHILE PARIZQ expresion PARDER sentencia

   42 sentencia_entrada: INPUT lista_id PYC

   43 lista_id: lista_id COMA ID
   44         | ID

   45 sentencia_salida: OUTPUT lista_expresion_cadena PYC

   46 lista_expresion_cadena: lista_expresion_cadena COMA expresion_cadena
   47                       | expresion_cadena

   48 expresion_cadena: expresion
   49                 | CADENA

   50 sentencia_return: RETURN expresion PYC

   51 sentencia_repeat_until: REPEAT sentencia UNTIL PARIZQ expresion PARDER PYC

   52 sentencia_lista: expresion OPERLISTA PYC
   53                | INT expresion PYC
   54                | DOLLAR expresion PYC

   55 expresion: PARIZQ expresion PARDER
   56          | MASMENOS expresion
   57          | NOT expresion
   58          | INT expresion
   59          | MENOSMENOS expresion
   60          | expresion MENOSMENOS expresion
   61          | expresion ORLOG expresion
   62          | expresion ANDLOG expresion
   63          | expresion ARROBA expresion
   64          | expresion REL expresion
   65          | expresion MASMENOS expresion
   66          | expresion PORPOR expresion
   67          | expresion PORPOT expresion
   68          | expresion MULDIV expresion
   69          | expresion EQN expresion
   70          | expresion OPERMASMAS expresion ARROBA expresion
   71          | ID
   72          | constante
   73          | funcion
   74          | error

   75 funcion: ID PARIZQ argumentos PARDER

   76 argumentos: lista_expresiones
   77           | %empty

   78 constante: CONSTANTE
   79          | lista

   80 lista: CORCHETEIZQ lista_expresiones CORCHETEDER
   81      | CORCHETEIZQ CORCHETEDER


Terminals, with rules where they appear

    $end (0) 0
    error (256) 14 25 74
    MAIN (258) 1
    VAR (259) 8
    PRIMITIVO (260) 15
    PYC (261) 13 37 42 45 50 51 52 53 54
    INPUT (262) 42
    OUTPUT (263) 45
    CADENA (264) 49
    RETURN (265) 50
    IF (266) 38
    ELSE (267) 39
    REPEAT (268) 51
    UNTIL (269) 51
    WHILE (270) 41
    OPERLISTA (271) 52
    CONSTANTE (272) 78
    INICIOBLOQUE (273) 3 8
    FINBLOQUE (274) 3 8
    CORCHETEIZQ (275) 80 81
    CORCHETEDER (276) 80 81
    COMA (277) 17 21 23 43 46
    ASIGN (278) 37
    PARDER (279) 1 20 38 41 51 55 75
    PARIZQ (280) 1 20 38 41 51 55 75
    ESTRUCTURA (281) 16
    ID (282) 17 18 20 23 24 37 43 44 71 75
    OPERMASMAS (283) 70
    ARROBA (284) 63 70
    ORLOG (285) 61
    ANDLOG (286) 62
    XOR (287)
    EQN (288) 69
    REL (289) 64
    PORPOR (290) 66
    PORPOT (291) 67
    MASMENOS (292) 56 65
    MULDIV (293) 68
    MENOSMENOS (294) 59 60
    NOT (295) 57
    INT (296) 53 58
    DOLLAR (297) 54
    BAR (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    programa (45)
        on left: 1
        on right: 0
    bloque (46)
        on left: 3
        on right: 1 7 28
    $@1 (47)
        on left: 2
        on right: 3
    declar_de_subprogs (48)
        on left: 4 5
        on right: 3 4
    declar_subprog (49)
        on left: 7
        on right: 4
    $@2 (50)
        on left: 6
        on right: 7
    declar_de_variables_locales (51)
        on left: 8 9
        on right: 3
    variables_locales (52)
        on left: 10 11
        on right: 8 10
    cuerpo_declar_variables (53)
        on left: 13 14
        on right: 10 11
    $@3 (54)
        on left: 12
        on right: 13
    tipo (55)
        on left: 15 16
        on right: 13 16 20 23 24
    lista_variables (56)
        on left: 17 18
        on right: 13 17
    cabecera_subprog (57)
        on left: 20
        on right: 7
    $@4 (58)
        on left: 19
        on right: 20
    lista_expresiones (59)
        on left: 21 22
        on right: 21 76 80
    parametros (60)
        on left: 23 24 25
        on right: 20 23
    sentencias (61)
        on left: 26 27
        on right: 3 26
    sentencia (62)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 26 38 39 41 51
    sentencia_asignacion (63)
        on left: 37
        on right: 29
    sentencia_if (64)
        on left: 38
        on right: 30
    sentencia_else (65)
        on left: 39 40
        on right: 38
    sentencia_while (66)
        on left: 41
        on right: 31
    sentencia_entrada (67)
        on left: 42
        on right: 32
    lista_id (68)
        on left: 43 44
        on right: 42 43
    sentencia_salida (69)
        on left: 45
        on right: 33
    lista_expresion_cadena (70)
        on left: 46 47
        on right: 45 46
    expresion_cadena (71)
        on left: 48 49
        on right: 46 47
    sentencia_return (72)
        on left: 50
        on right: 34
    sentencia_repeat_until (73)
        on left: 51
        on right: 35
    sentencia_lista (74)
        on left: 52 53 54
        on right: 36
    expresion (75)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 21 22 37 38 41 48 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    funcion (76)
        on left: 75
        on right: 73
    argumentos (77)
        on left: 76 77
        on right: 75
    constante (78)
        on left: 78 79
        on right: 72
    lista (79)
        on left: 80 81
        on right: 79


State 0

    0 $accept: . programa $end

    MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: MAIN . PARIZQ PARDER bloque

    PARIZQ  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: MAIN PARIZQ . PARDER bloque

    PARDER  shift, and go to state 5


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    1 programa: MAIN PARIZQ PARDER . bloque

    INICIOBLOQUE  shift, and go to state 6

    bloque  go to state 7


State 6

    3 bloque: INICIOBLOQUE . $@1 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 2 ($@1)

    $@1  go to state 8


State 7

    1 programa: MAIN PARIZQ PARDER bloque .

    $default  reduce using rule 1 (programa)


State 8

    3 bloque: INICIOBLOQUE $@1 . declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    VAR  shift, and go to state 9

    $default  reduce using rule 9 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 10


State 9

    8 declar_de_variables_locales: VAR . INICIOBLOQUE variables_locales FINBLOQUE

    INICIOBLOQUE  shift, and go to state 11


State 10

    3 bloque: INICIOBLOQUE $@1 declar_de_variables_locales . declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 5 (declar_de_subprogs)

    declar_de_subprogs  go to state 12


State 11

    8 declar_de_variables_locales: VAR INICIOBLOQUE . variables_locales FINBLOQUE

    error       shift, and go to state 13
    PRIMITIVO   shift, and go to state 14
    ESTRUCTURA  shift, and go to state 15

    variables_locales        go to state 16
    cuerpo_declar_variables  go to state 17
    tipo                     go to state 18


State 12

    3 bloque: INICIOBLOQUE $@1 declar_de_variables_locales declar_de_subprogs . sentencias FINBLOQUE
    4 declar_de_subprogs: declar_de_subprogs . declar_subprog

    PRIMITIVO   shift, and go to state 14
    ESTRUCTURA  shift, and go to state 15

    $default  reduce using rule 27 (sentencias)

    declar_subprog    go to state 19
    tipo              go to state 20
    cabecera_subprog  go to state 21
    sentencias        go to state 22


State 13

   14 cuerpo_declar_variables: error .

    $default  reduce using rule 14 (cuerpo_declar_variables)


State 14

   15 tipo: PRIMITIVO .

    $default  reduce using rule 15 (tipo)


State 15

   16 tipo: ESTRUCTURA . tipo

    PRIMITIVO   shift, and go to state 14
    ESTRUCTURA  shift, and go to state 15

    tipo  go to state 23


State 16

    8 declar_de_variables_locales: VAR INICIOBLOQUE variables_locales . FINBLOQUE
   10 variables_locales: variables_locales . cuerpo_declar_variables

    error       shift, and go to state 13
    PRIMITIVO   shift, and go to state 14
    FINBLOQUE   shift, and go to state 24
    ESTRUCTURA  shift, and go to state 15

    cuerpo_declar_variables  go to state 25
    tipo                     go to state 18


State 17

   11 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 11 (variables_locales)


State 18

   13 cuerpo_declar_variables: tipo . $@3 lista_variables PYC

    $default  reduce using rule 12 ($@3)

    $@3  go to state 26


State 19

    4 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 4 (declar_de_subprogs)


State 20

   20 cabecera_subprog: tipo . ID $@4 PARIZQ parametros PARDER

    ID  shift, and go to state 27


State 21

    7 declar_subprog: cabecera_subprog . $@2 bloque

    $default  reduce using rule 6 ($@2)

    $@2  go to state 28


State 22

    3 bloque: INICIOBLOQUE $@1 declar_de_variables_locales declar_de_subprogs sentencias . FINBLOQUE
   26 sentencias: sentencias . sentencia

    error         shift, and go to state 29
    INPUT         shift, and go to state 30
    OUTPUT        shift, and go to state 31
    RETURN        shift, and go to state 32
    IF            shift, and go to state 33
    REPEAT        shift, and go to state 34
    WHILE         shift, and go to state 35
    CONSTANTE     shift, and go to state 36
    INICIOBLOQUE  shift, and go to state 6
    FINBLOQUE     shift, and go to state 37
    CORCHETEIZQ   shift, and go to state 38
    PARIZQ        shift, and go to state 39
    ID            shift, and go to state 40
    MASMENOS      shift, and go to state 41
    MENOSMENOS    shift, and go to state 42
    NOT           shift, and go to state 43
    INT           shift, and go to state 44
    DOLLAR        shift, and go to state 45

    bloque                  go to state 46
    sentencia               go to state 47
    sentencia_asignacion    go to state 48
    sentencia_if            go to state 49
    sentencia_while         go to state 50
    sentencia_entrada       go to state 51
    sentencia_salida        go to state 52
    sentencia_return        go to state 53
    sentencia_repeat_until  go to state 54
    sentencia_lista         go to state 55
    expresion               go to state 56
    funcion                 go to state 57
    constante               go to state 58
    lista                   go to state 59


State 23

   16 tipo: ESTRUCTURA tipo .

    $default  reduce using rule 16 (tipo)


State 24

    8 declar_de_variables_locales: VAR INICIOBLOQUE variables_locales FINBLOQUE .

    $default  reduce using rule 8 (declar_de_variables_locales)


State 25

   10 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 10 (variables_locales)


State 26

   13 cuerpo_declar_variables: tipo $@3 . lista_variables PYC

    ID  shift, and go to state 60

    lista_variables  go to state 61


State 27

   20 cabecera_subprog: tipo ID . $@4 PARIZQ parametros PARDER

    $default  reduce using rule 19 ($@4)

    $@4  go to state 62


State 28

    7 declar_subprog: cabecera_subprog $@2 . bloque

    INICIOBLOQUE  shift, and go to state 6

    bloque  go to state 63


State 29

   74 expresion: error .

    $default  reduce using rule 74 (expresion)


State 30

   42 sentencia_entrada: INPUT . lista_id PYC

    ID  shift, and go to state 64

    lista_id  go to state 65


State 31

   45 sentencia_salida: OUTPUT . lista_expresion_cadena PYC

    error        shift, and go to state 29
    CADENA       shift, and go to state 66
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    lista_expresion_cadena  go to state 69
    expresion_cadena        go to state 70
    expresion               go to state 71
    funcion                 go to state 57
    constante               go to state 58
    lista                   go to state 59


State 32

   50 sentencia_return: RETURN . expresion PYC

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 72
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 33

   38 sentencia_if: IF . PARIZQ expresion PARDER sentencia sentencia_else

    PARIZQ  shift, and go to state 73


State 34

   51 sentencia_repeat_until: REPEAT . sentencia UNTIL PARIZQ expresion PARDER PYC

    error         shift, and go to state 29
    INPUT         shift, and go to state 30
    OUTPUT        shift, and go to state 31
    RETURN        shift, and go to state 32
    IF            shift, and go to state 33
    REPEAT        shift, and go to state 34
    WHILE         shift, and go to state 35
    CONSTANTE     shift, and go to state 36
    INICIOBLOQUE  shift, and go to state 6
    CORCHETEIZQ   shift, and go to state 38
    PARIZQ        shift, and go to state 39
    ID            shift, and go to state 40
    MASMENOS      shift, and go to state 41
    MENOSMENOS    shift, and go to state 42
    NOT           shift, and go to state 43
    INT           shift, and go to state 44
    DOLLAR        shift, and go to state 45

    bloque                  go to state 46
    sentencia               go to state 74
    sentencia_asignacion    go to state 48
    sentencia_if            go to state 49
    sentencia_while         go to state 50
    sentencia_entrada       go to state 51
    sentencia_salida        go to state 52
    sentencia_return        go to state 53
    sentencia_repeat_until  go to state 54
    sentencia_lista         go to state 55
    expresion               go to state 56
    funcion                 go to state 57
    constante               go to state 58
    lista                   go to state 59


State 35

   41 sentencia_while: WHILE . PARIZQ expresion PARDER sentencia

    PARIZQ  shift, and go to state 75


State 36

   78 constante: CONSTANTE .

    $default  reduce using rule 78 (constante)


State 37

    3 bloque: INICIOBLOQUE $@1 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE .

    $default  reduce using rule 3 (bloque)


State 38

   80 lista: CORCHETEIZQ . lista_expresiones CORCHETEDER
   81      | CORCHETEIZQ . CORCHETEDER

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    CORCHETEDER  shift, and go to state 76
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    lista_expresiones  go to state 77
    expresion          go to state 78
    funcion            go to state 57
    constante          go to state 58
    lista              go to state 59


State 39

   55 expresion: PARIZQ . expresion PARDER

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 79
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 40

   37 sentencia_asignacion: ID . ASIGN expresion PYC
   71 expresion: ID .
   75 funcion: ID . PARIZQ argumentos PARDER

    ASIGN   shift, and go to state 80
    PARIZQ  shift, and go to state 81

    $default  reduce using rule 71 (expresion)


State 41

   56 expresion: MASMENOS . expresion

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 82
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 42

   59 expresion: MENOSMENOS . expresion

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 83
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 43

   57 expresion: NOT . expresion

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 84
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 44

   53 sentencia_lista: INT . expresion PYC
   58 expresion: INT . expresion

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 85
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 45

   54 sentencia_lista: DOLLAR . expresion PYC

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 86
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 46

   28 sentencia: bloque .

    $default  reduce using rule 28 (sentencia)


State 47

   26 sentencias: sentencias sentencia .

    $default  reduce using rule 26 (sentencias)


State 48

   29 sentencia: sentencia_asignacion .

    $default  reduce using rule 29 (sentencia)


State 49

   30 sentencia: sentencia_if .

    $default  reduce using rule 30 (sentencia)


State 50

   31 sentencia: sentencia_while .

    $default  reduce using rule 31 (sentencia)


State 51

   32 sentencia: sentencia_entrada .

    $default  reduce using rule 32 (sentencia)


State 52

   33 sentencia: sentencia_salida .

    $default  reduce using rule 33 (sentencia)


State 53

   34 sentencia: sentencia_return .

    $default  reduce using rule 34 (sentencia)


State 54

   35 sentencia: sentencia_repeat_until .

    $default  reduce using rule 35 (sentencia)


State 55

   36 sentencia: sentencia_lista .

    $default  reduce using rule 36 (sentencia)


State 56

   52 sentencia_lista: expresion . OPERLISTA PYC
   60 expresion: expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    OPERLISTA   shift, and go to state 87
    OPERMASMAS  shift, and go to state 88
    ARROBA      shift, and go to state 89
    ORLOG       shift, and go to state 90
    ANDLOG      shift, and go to state 91
    EQN         shift, and go to state 92
    REL         shift, and go to state 93
    PORPOR      shift, and go to state 94
    PORPOT      shift, and go to state 95
    MASMENOS    shift, and go to state 96
    MULDIV      shift, and go to state 97
    MENOSMENOS  shift, and go to state 98


State 57

   73 expresion: funcion .

    $default  reduce using rule 73 (expresion)


State 58

   72 expresion: constante .

    $default  reduce using rule 72 (expresion)


State 59

   79 constante: lista .

    $default  reduce using rule 79 (constante)


State 60

   17 lista_variables: ID . COMA lista_variables
   18                | ID .

    COMA  shift, and go to state 99

    $default  reduce using rule 18 (lista_variables)


State 61

   13 cuerpo_declar_variables: tipo $@3 lista_variables . PYC

    PYC  shift, and go to state 100


State 62

   20 cabecera_subprog: tipo ID $@4 . PARIZQ parametros PARDER

    PARIZQ  shift, and go to state 101


State 63

    7 declar_subprog: cabecera_subprog $@2 bloque .

    $default  reduce using rule 7 (declar_subprog)


State 64

   44 lista_id: ID .

    $default  reduce using rule 44 (lista_id)


State 65

   42 sentencia_entrada: INPUT lista_id . PYC
   43 lista_id: lista_id . COMA ID

    PYC   shift, and go to state 102
    COMA  shift, and go to state 103


State 66

   49 expresion_cadena: CADENA .

    $default  reduce using rule 49 (expresion_cadena)


State 67

   71 expresion: ID .
   75 funcion: ID . PARIZQ argumentos PARDER

    PARIZQ  shift, and go to state 81

    $default  reduce using rule 71 (expresion)


State 68

   58 expresion: INT . expresion

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 104
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 69

   45 sentencia_salida: OUTPUT lista_expresion_cadena . PYC
   46 lista_expresion_cadena: lista_expresion_cadena . COMA expresion_cadena

    PYC   shift, and go to state 105
    COMA  shift, and go to state 106


State 70

   47 lista_expresion_cadena: expresion_cadena .

    $default  reduce using rule 47 (lista_expresion_cadena)


State 71

   48 expresion_cadena: expresion .
   60 expresion: expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    OPERMASMAS  shift, and go to state 88
    ARROBA      shift, and go to state 89
    ORLOG       shift, and go to state 90
    ANDLOG      shift, and go to state 91
    EQN         shift, and go to state 92
    REL         shift, and go to state 93
    PORPOR      shift, and go to state 94
    PORPOT      shift, and go to state 95
    MASMENOS    shift, and go to state 96
    MULDIV      shift, and go to state 97
    MENOSMENOS  shift, and go to state 98

    $default  reduce using rule 48 (expresion_cadena)


State 72

   50 sentencia_return: RETURN expresion . PYC
   60 expresion: expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    PYC         shift, and go to state 107
    OPERMASMAS  shift, and go to state 88
    ARROBA      shift, and go to state 89
    ORLOG       shift, and go to state 90
    ANDLOG      shift, and go to state 91
    EQN         shift, and go to state 92
    REL         shift, and go to state 93
    PORPOR      shift, and go to state 94
    PORPOT      shift, and go to state 95
    MASMENOS    shift, and go to state 96
    MULDIV      shift, and go to state 97
    MENOSMENOS  shift, and go to state 98


State 73

   38 sentencia_if: IF PARIZQ . expresion PARDER sentencia sentencia_else

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 108
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 74

   51 sentencia_repeat_until: REPEAT sentencia . UNTIL PARIZQ expresion PARDER PYC

    UNTIL  shift, and go to state 109


State 75

   41 sentencia_while: WHILE PARIZQ . expresion PARDER sentencia

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 110
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 76

   81 lista: CORCHETEIZQ CORCHETEDER .

    $default  reduce using rule 81 (lista)


State 77

   21 lista_expresiones: lista_expresiones . COMA expresion
   80 lista: CORCHETEIZQ lista_expresiones . CORCHETEDER

    CORCHETEDER  shift, and go to state 111
    COMA         shift, and go to state 112


State 78

   22 lista_expresiones: expresion .
   60 expresion: expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    OPERMASMAS  shift, and go to state 88
    ARROBA      shift, and go to state 89
    ORLOG       shift, and go to state 90
    ANDLOG      shift, and go to state 91
    EQN         shift, and go to state 92
    REL         shift, and go to state 93
    PORPOR      shift, and go to state 94
    PORPOT      shift, and go to state 95
    MASMENOS    shift, and go to state 96
    MULDIV      shift, and go to state 97
    MENOSMENOS  shift, and go to state 98

    $default  reduce using rule 22 (lista_expresiones)


State 79

   55 expresion: PARIZQ expresion . PARDER
   60          | expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    PARDER      shift, and go to state 113
    OPERMASMAS  shift, and go to state 88
    ARROBA      shift, and go to state 89
    ORLOG       shift, and go to state 90
    ANDLOG      shift, and go to state 91
    EQN         shift, and go to state 92
    REL         shift, and go to state 93
    PORPOR      shift, and go to state 94
    PORPOT      shift, and go to state 95
    MASMENOS    shift, and go to state 96
    MULDIV      shift, and go to state 97
    MENOSMENOS  shift, and go to state 98


State 80

   37 sentencia_asignacion: ID ASIGN . expresion PYC

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    expresion  go to state 114
    funcion    go to state 57
    constante  go to state 58
    lista      go to state 59


State 81

   75 funcion: ID PARIZQ . argumentos PARDER

    error        shift, and go to state 29
    CONSTANTE    shift, and go to state 36
    CORCHETEIZQ  shift, and go to state 38
    PARIZQ       shift, and go to state 39
    ID           shift, and go to state 67
    MASMENOS     shift, and go to state 41
    MENOSMENOS   shift, and go to state 42
    NOT          shift, and go to state 43
    INT          shift, and go to state 68

    PARDER  reduce using rule 77 (argumentos)

    lista_expresiones  go to state 115
    expresion          go to state 78
    funcion            go to state 57
    argumentos         go to state 116
    constante          go to state 58
    lista              go to state 59


State 82

   56 expresion: MASMENOS expresion .
   60          | expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    $default  reduce using rule 56 (expresion)


State 83

   59 expresion: MENOSMENOS expresion .
   60          | expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    MENOSMENOS  shift, and go to state 98

    $default  reduce using rule 59 (expresion)


State 84

   57 expresion: NOT expresion .
   60          | expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    $default  reduce using rule 57 (expresion)


State 85

   53 sentencia_lista: INT expresion . PYC
   58 expresion: INT expresion .
   60          | expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion

    PYC  shift, and go to state 117

    $default  reduce using rule 58 (expresion)


State 86

   54 sentencia_lista: DOLLAR expresion . PYC
   60 expresion: expresion . MENOSMENOS expresion
   61          | expresion . ORLOG expresion
   62          | expresion . ANDLOG expresion
   63          | expresion . ARROBA expresion
   64          | expresion . REL expresion
   65          | expresion . MASMENOS expresion
   66          | expresion . PORPOR expresion
   67          | expresion . PORPOT expresion
   68          | expresion . MULDIV expresion
   69          | expresion . EQN expresion
   70          | expresion . OPERMASMAS expresion ARROBA expresion
